# litmus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: chaos.yml  ci.yml
chaos/faults/: faults.py
chaos/fixtures/: inprocess.py  subprocess.py
chaos/framework/: injector.py  triggers.py
chaos/scenarios/: test_concurrent.py  test_corruption.py  test_crash_multipart.py  test_desync.py  test_enospc.py
docs/: compatibility.md  crash-model.md  publication-barrier.md
scripts/: run_ceph_s3tests.sh
server/: app.py  config.py  consistency.py
server/api/: buckets.py  multipart.py  objects.py
server/errors/: s3errors.py
server/metadata/: base.py  sqlite.py
server/multipart/: state_machine.py
server/storage/: base.py  filesystem.py
tests/: test_smoke.py
tests/conformance/: test_buckets.py  test_multipart.py  test_objects.py  test_range.py
tests/unit/: test_consistency.py  test_errors.py  test_etag.py  test_sqlite.py
