[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litmus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "awscli>=1.32.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "chaos/scenarios"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".s3tests", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["server", "chaos"]

[tool.hatch.build.targets.wheel]
packages = ["server", "chaos"]